2006-04-18  David Reveman  <davidr@novell.com>

	* plugins/cube.c (readSvgToTexture): Fix typo.

	* plugins/resize.c: Constrain cursor movement to min/max window size.

	* src/window.c (constrainNewWindowSize): Fix aspect ratio calculations.

2006-04-17  David Reveman  <davidr@novell.com>

	* plugins/cube.c: Put PNG on top face by default.

	* images/Makefile.am: Remove window.png.
	Add novell.png.

	* include/compiz.h:
	* src/readpng.c: Add openImageFile.

	* plugins/cube.c: Support for PNGs on top face.
	Add scale image option which is used to determine if top face
	image should be scaled or not.

2006-04-15  David Reveman  <davidr@novell.com>

	* plugins/wobbly.c: Add modal dialog type to default list of windows
	that should be wobbly when moved.

	* plugins/water.c (SET): +1 for border.

2006-04-14  Dan Winship  <danw@novell.com>

	* plugins/gconf-dump.c: add "water" to gconfDeps

	* plugins/compiz.schemas: regen including the water options

2006-04-14  David Reveman  <davidr@novell.com>

	* src/event.c (handleWindowDamageRect): Ignore damage from windows
	that aren't redirected.

	* include/compiz.h:
	* src/window.c:
	* src/display.c (eventLoop):
	* src/screen.c: Add support for automatic unredirecting of fullscreen
	windows.

	* plugins/scale.c (scaleInitiate): Layout thumbnails before we
	grab the screen to make sure some window exist.

	* plugins/resize.c: Allow 4-way resize. (Mike Hearn)

2006-04-13  Dan Winship  <danw@novell.com>

	* src/screen.c (panelAction): take a timestamp and pass that to
	the panel rather than using CurrentTime

	* src/event.c (handleEvent): update for that

	* src/window.c (moveResizeWindow): fix the gravity handling so
	self-resizing windows don't dance (although I'm pretty sure this
	is a symptom of mishandling gravity somewhere else).

	* plugins/gconf.c (gconfInitOption): Request the default value of
	the key from gconf, rather than initializing the key to the
	internal default value if it hasn't yet been set by the user.